--- a/app/src/main/res/layout/fragment_historique_colis.xml
+++ b/app/src/main/res/layout/fragment_historique_colis.xml
@@ -16,21 +16,17 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
+        <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
+            android:id="@+id/ah_bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
             android:background="@color/colorPrimary"
-            android:elevation="10dp"
-            android:fadingEdgeLength="10dp"
             app:itemTextColor="@android:color/white"
-            app:layout_collapseMode="parallax"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:menu="@menu/navigation" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_etape_list"
@@ -44,7 +40,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/navigation" />
+            app:layout_constraintTop_toBottomOf="@+id/ah_bottom_navigation" />
 
         <TextView
             android:id="@+id/text_object_not_found"
@@ -61,7 +57,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/navigation" />
+            app:layout_constraintTop_toBottomOf="@id/ah_bottom_navigation" />
 
 
     </android.support.constraint.ConstraintLayout>
